restyled home page and fixed some alignment

--- a/src/components/NewBuild/Parts/complete.css
+++ b/src/components/NewBuild/Parts/complete.css
@@ -13,6 +13,11 @@ h1 {
   font-size: 30px;
   text-align: center;
   color: rgba(245, 245, 245, 0.9);
+  background-color: rgba(0,0,0,.9);
+  color: rgba(245, 245, 245, 0.9);
+  border: 2px rgba(245, 245, 245, 0.9) solid;
+  padding: .5vw;
+  border-radius: 7px;
 }
 
 h4 {
@@ -34,6 +39,11 @@ h4 {
   justify-content: center;
 }
 
+.ttpri {
+  display: flex;
+  justify-content: center;
+}
+
 h3 {
   background-color: rgba(0,0,0,.9);
   color: rgba(245, 245, 245, 0.9);
@@ -47,13 +57,15 @@ h3 {
   position: relative;
   left: 7.5%;
   width: 85%;
+  justify-content: center;
   border-radius: 5px;
   text-align: center;
   background-color: rgba(22, 75, 106, 0.9);
   font-size: 18px;
-  padding: 5px;
+  padding: 5%;
   margin-top: 2vh;
-  border: 2px black solid
+  border: 2px black solid;
+  width: max-content;
 }
 
 .new {
@@ -113,7 +125,7 @@ h3 {
   }
   .linkbutt {
     width: 60%;
-    left: 20%
+    left: 15%
   }
 
 }
