--- a/src/components/NewBuild/newbuild.css
+++ b/src/components/NewBuild/newbuild.css
@@ -23,8 +23,8 @@
 }
 
 .part_img {
-  height: 13vh;
-  margin-left: 2vw;
+  height: 12vh;
+  margin-left: 1vw;
 }
 
 /* .startbutton {
